--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    
+    <link rel="icon" href="<imgs/config/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imgs/config/logo.png" type="image/x-icon"  /><!-- 必须 -->
+    <script src="config/adress.js"></script>
     <title>pang-blog</title>
   </head>
   <body>
