--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<imgs/config/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="imgs/config/logo.png" type="image/x-icon"  /><!-- 必须 -->
-    <script src="config/adress.js"></script>
+    <script src="config/address.js"></script>
     <title>pang-blog</title>
   </head>
   <body>
